--- a/clipboard-landing-page-master/index.html
+++ b/clipboard-landing-page-master/index.html
@@ -130,7 +130,7 @@
         </div>
 
         <div class="buttons">
-          <div class="button1">Download for iOS c</div>
+          <div class="button1">Download for iOS</div>
           <div class="button2">Download for Mac</div>
         </div>
       </div>
