--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- Head -->
       <div class="head">
         <div class="h1"><h1>namedmichi Seiten</h1></div>
       </div>
+      <!-- Content -->
       <div class="content">
+        <!-- Body -->
         <div class="body">
+          <!-- Container für Seiten -->
           <div class="seitenContainer">
             <div class="seiten-block iright">
               <div class="seiten">
@@ -62,8 +66,29 @@
               </div>
             </div>
           </div>
+          <!-- Container für Seiten -->
         </div>
+        <!-- Footer -->
+        <div class="footer">
+          <footer>
+            <div class="fo-block logo"><img src="images/logo.svg" alt="" /></div>
+            <div class="fo-block">
+              <div class="fo-text"><a href="https://github.com/namedmichi">Github</a></div>
+            </div>
+            <div class="fo-block">
+              <div class="fo-text"><a href="https://github.com/namedmichi/workspacestudio/blob/master/README.md">README</a></div>
+            </div>
+            <div class="fo-block">
+              <div class="fo-text install"><a href="">Kontakt</a></div>
+            </div>
+            <div class="fo-block">
+              <img src="gitpage-images/icon-instagram.svg" alt="" />
+            </div>
+          </footer>
+        </div>
+        <!-- Footer -->
       </div>
+      <!-- Content -->
     </div>
   </body>
 </html>
