--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+      rel="stylesheet"
+    />
     <title>namedmichi Projekt Overview</title>
   </head>
   <body>
@@ -71,12 +74,21 @@
         <!-- Footer -->
         <div class="footer">
           <footer>
-            <div class="fo-block logo"><img src="images/logo.svg" alt="" /></div>
-            <div class="fo-block">
-              <div class="fo-text"><a href="https://github.com/namedmichi">Github</a></div>
+            <div class="fo-block logo">
+              <img src="images/logo.svg" alt="" />
             </div>
             <div class="fo-block">
-              <div class="fo-text"><a href="https://github.com/namedmichi/workspacestudio/blob/master/README.md">README</a></div>
+              <div class="fo-text">
+                <a href="https://github.com/namedmichi">Github</a>
+              </div>
+            </div>
+            <div class="fo-block">
+              <div class="fo-text">
+                <a
+                  href="https://github.com/namedmichi/workspacestudio/blob/master/README.md"
+                  >README</a
+                >
+              </div>
             </div>
             <div class="fo-block">
               <div class="fo-text install"><a href="">Kontakt</a></div>
