--- a/index.html
+++ b/index.html
@@ -62,10 +62,20 @@
             </div>
             <div class="seiten-block tright">
               <div class="img">
-                <img src="gitpage-images/chiemgau.png" alt="" />
+                <img src="gitpage-images/Web.png" alt="" />
               </div>
               <div class="seiten">
+                <a href="webentwicklerkurs-site\site.html"
+                  >Webentwicklerkurs</a
+                >
+              </div>
+            </div>
+            <div class="seiten-block iright">
+              <div class="seiten">
                 <a href="site\haupt.html">Chiemgau48 Zeitung</a>
+              </div>
+              <div class="img">
+                <img src="gitpage-images/chiemgau.png" alt="" />
               </div>
             </div>
           </div>
