--- a/webentwicklerkurs-site/site.html
+++ b/webentwicklerkurs-site/site.html
@@ -12,7 +12,7 @@
         <div class="head">
             <div class="oben">
                 <h1>Webentwicklerkurs</h1>
-                <p>Mit flexibler Gestaltung.</p>
+                <p>Mit <b>flexibler</b> Gestaltung.</p>
             </div>
             <div class="unten">
                 <div class="nav-item-container">
