--- a/webentwicklerkurs-site/site.html
+++ b/webentwicklerkurs-site/site.html
@@ -36,7 +36,7 @@
                 <div class="block1">
                     <h2>Über uns</h2>
                     <h4>Unser Büro:</h4>
-                    <div class="bilder">Bild</div>
+                    <div class="bilder bilderg">Bild</div>
                     <p class="text">Etwas Text über uns lorem ipsum officia deserunt mollit anim..</p>
                 </div>
                 <div class="block2">
@@ -51,7 +51,7 @@
                 <div class="block1">
                     <h2>TITEL ÜBERSCHRIFT</h2>
                     <h4>Titel Beschreibung, 07.03.2023</h4>
-                    <div class="bilder">Bild</div>
+                    <div class="bilder bilderg">Bild</div>
                     <p class="text">Etwas Text…<br><br>
 
                         Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
@@ -59,7 +59,7 @@
                 <div class="block2">
                     <div class="h2"><h2>TITEL ÜBERSCHRIFT</h2></div>
                     <div class="h4"><h4>Titel Beschreibung, 02.02.2023</h4></div>
-                    <div class="bilder">Bild</div>
+                    <div class="bilder bilderg">Bild</div>
 
                     <p class="text">Etwas Text… <br><br>
 
