--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                 <img src="gitpage-images/Web.png" alt="" />
               </div>
               <div class="seiten">
-                <a href="webentwicklerkurs-site\site.html"
-                  >Webentwicklerkurs</a
-                >
+                <a href="webentwicklerkurs-site\site.html">Webentwicklerkurs</a>
               </div>
             </div>
             <div class="seiten-block iright">
