--- a/clipboard-landing-page-master/index.html
+++ b/clipboard-landing-page-master/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <script src="scripts.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
@@ -20,8 +21,12 @@
     <title>Frontend Mentor | Clipboard landing page</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" id="wrapper">
       <div class="head">
+        <div class="modes">
+          <div class="modeD" onclick="setDark()">Dark Mode</div>
+          <div class="modeL" onclick="setLight()">Light mode</div>
+        </div>
         <div class="logo"><img src="images/logo.svg" alt="" /></div>
         <div class="h1"><h1>A history of everything you copy</h1></div>
         <div class="text">
