--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
             </div>
             <div class="seiten-block tright">
               <div class="img">
-                <img src="gitpage-images/huddle.png" alt="" />
+                <img src="gitpage-images/web3.png" alt="" />
               </div>
               <div class="seiten">
-                <a
-                  href="huddle-landing-page-with-alternating-feature-blocks-master\index.html"
-                  >Huddle(Frontend Mentor)</a
+                <a href="news-homepage-main\index.html"
+                  >Web 3.0 (Frontend Mentor)</a
                 >
               </div>
             </div>
@@ -74,6 +73,17 @@
               </div>
               <div class="img">
                 <img src="gitpage-images/chiemgau.png" alt="" />
+              </div>
+            </div>
+            <div class="seiten-block tright">
+              <div class="img">
+                <img src="gitpage-images/huddle.png" alt="" />
+              </div>
+              <div class="seiten">
+                <a
+                  href="huddle-landing-page-with-alternating-feature-blocks-master\index.html"
+                  >Huddle(Frontend Mentor)</a
+                >
               </div>
             </div>
           </div>
