--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -53,7 +53,10 @@
             <div class="head-text">Categories</div>
             <div class="menu">
               <span onclick="openNav()"
-                ><img src="assets/images/icon-menu.svg" alt=""
+                ><img
+                  src="assets/images/icon-menu.svg"
+                  class="open-menu"
+                  alt=""
               /></span>
             </div>
           </div>
