--- a/index.html
+++ b/index.html
@@ -31,9 +31,21 @@
         <div class="body">
           <!-- Container für Seiten -->
           <div class="seitenContainer">
+            <div class="seiten-block tright">
+              <div class="img">
+                <img src="gitpage-images/sneaker.png" alt="" />
+              </div>
+              <div class="seiten">
+                <a href="ecommerce-product-page-main\index.html"
+                  >Sneaker (Frontend Mentor)</a
+                >
+                <p>Responsive JavaScript</p>
+              </div>
+            </div>
             <div class="seiten-block iright">
               <div class="seiten">
                 <a href="uebungen.23\google\google.html">Google Fake</a>
+                <p>Responsive</p>
               </div>
               <div class="img">
                 <img src="gitpage-images/google.png" alt="" />
@@ -47,6 +59,7 @@
                 <a href="news-homepage-main\index.html"
                   >Web 3.0 (Frontend Mentor)</a
                 >
+                <p>Responsive</p>
               </div>
             </div>
             <div class="seiten-block iright">
@@ -54,6 +67,7 @@
                 <a href="clipboard-landing-page-master\index.html"
                   >Clipboard(Frontend Mentor)</a
                 >
+                <p>JavaScript</p>
               </div>
               <div class="img">
                 <img src="gitpage-images/clipboard.png" alt="" />
@@ -68,11 +82,13 @@
                   href="huddle-landing-page-with-alternating-feature-blocks-master\index.html"
                   >Huddle(Frontend Mentor)</a
                 >
+                <p>Test</p>
               </div>
             </div>
             <div class="seiten-block iright">
               <div class="seiten">
                 <a href="site\haupt.html">Chiemgau48 Zeitung</a>
+                <p>Erstes "Projekt"</p>
               </div>
               <div class="img">
                 <img src="gitpage-images/chiemgau.png" alt="" />
@@ -84,6 +100,7 @@
               </div>
               <div class="seiten">
                 <a href="webentwicklerkurs-site\site.html">Webentwicklerkurs</a>
+                <p>Responsive</p>
               </div>
             </div>
           </div>
