--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -97,6 +97,7 @@
               onclick="showCart()"
             />
           </div>
+          <div id="cart-containing">1</div>
           <div class="pb">
             <img class="pb-pic" src="images/image-avatar.png" alt="" />
           </div>
