--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
         <div class="body">
           <!-- Container für Seiten -->
           <div class="seitenContainer">
+            <div class="seiten-block iright">
+              <div class="seiten">
+                <a href="rock-paper-scissors-master\index.html"
+                  >Schere Stein Papier</a
+                >
+                <p>JavaScript</p>
+              </div>
+              <div class="img">
+                <img src="gitpage-images/scheresteinpapier.png" alt="" />
+              </div>
+            </div>
             <div class="seiten-block tright">
               <div class="img">
                 <img src="gitpage-images/sneaker.png" alt="" />
