--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="seiten-block iright">
               <div class="seiten">
                 <a href="rock-paper-scissors-master\index.html"
-                  >Schere Stein Papier</a
+                  >Schere Stein Papier <br />(Frontend Mentor)</a
                 >
                 <p>JavaScript</p>
               </div>
