--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         <div class="body">
           <!-- Container für Seiten -->
           <div class="seitenContainer">
+            <div class="seiten-block tright">
+              <div class="img">
+                <img src="gitpage-images/woinderwelt.png" alt="" />
+              </div>
+              <div class="seiten">
+                <a href="angular-test/firstTest/docs/">Wo in der Welt</a>
+                <p>(WIP)</p>
+              </div>
+            </div>
             <div class="seiten-block iright">
               <div class="seiten">
                 <a href="rock-paper-scissors-master\index.html"
