--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </div>
               <div class="seiten">
                 <a href="angular-test/firstTest/docs/">Wo in der Welt</a>
-                <p>(WIP)</p>
+                <p>Erstes Angular Projekt(WIP)</p>
               </div>
             </div>
             <div class="seiten-block iright">
