--- a/chiemgau48reloaded/index.html
+++ b/chiemgau48reloaded/index.html
@@ -10,21 +10,27 @@
   <body>
     <div class="wrapper">
       <nav>
-        <div class="navMenu">test</div>
+        <div class="navMenu">
+          <li>Startseite</li>
+          <li>News</li>
+          <li>Lokales</li>
+          <li>Gewinnspiel</li>
+          <li>Newsletter</li>
+        </div>
 
         <img src="img/logo.svg" alt="" />
       </nav>
       <div class="content">
-        <div class="left">
+        <div class="cLeft">
           <div class="article">
             <div class="img"><img src="img/test.jpg" alt="" /></div>
             <div class="news">
-              <h2>Lorem ipsum dolor</h2>
+              <h2>Verdächtiger nach Einbruch in Supermarkt gefasst</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate, fuga ab reiciendis commodi quidem natus animi
-                delectus repellendus? Velit sit quisquam placeat corrupti
-                inventore dolor delectus commodi facilis impedit soluta.
+                In der vergangenen Nacht wurde in einen örtlichen Supermarkt
+                eingebrochen. Die Polizei konnte schnell einen Verdächtigen
+                fassen, der bei der Tat gestört wurde und flüchtete. Die
+                gestohlenen Waren konnten sichergestellt werden.
               </p>
             </div>
           </div>
@@ -33,33 +39,35 @@
               <img src="img/test.jpg" alt="" />
               <div>
                 <center>
-                  <h3>lorem</h3>
+                  <h3>Lokale Künstler stellen im Museum aus</h3>
                 </center>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-                  voluptas fugit obcaecati eaque officia, accusantium repellat
-                  voluptatum nesciunt.
+                  Ab nächster Woche werden lokale Künstler ihre Werke im
+                  örtlichen Museum ausstellen. Die Ausstellung bietet eine große
+                  Auswahl an Kunstwerken, darunter Gemälde, Skulpturen und
+                  Fotografien. Der Eintritt ist frei.
                 </p>
               </div>
             </div>
             <div class="right">
-              <h3>ipsum</h3>
+              <h3>Autofahrer verursacht Unfall</h3>
               <img src="img/test.jpg" alt="" />
             </div>
           </div>
           <div class="articleText">
             <center>
-              <h2>Lorem ipsum dolor</h2>
+              <h2>Neues Fitnessstudio eröffnet</h2>
               <h4>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-                culpa, possimus corrupti commodi, modi ea id praesentium eaque
-                quas, iste exercitationem
+                Ein neues Fitnessstudio hat in der Stadt eröffnet. Es bietet
+                eine breite Palette an Fitnessgeräten und Kursen an, darunter
+                Yoga, Pilates und Spinning. Es ist für jeden etwas dabei, egal
+                ob Anfänger oder Fortgeschrittene.
               </h4>
             </center>
           </div>
           <div class="dArticle2">
             <div class="left">
-              <center><h3>ipsum</h3></center>
+              <center><h3>Schwerer Verkehrsunfall auf der Autobahn</h3></center>
 
               <img src="img/test.jpg" alt="" />
             </div>
@@ -67,18 +75,65 @@
               <img src="img/test.jpg" alt="" />
               <div>
                 <center>
-                  <h3>lorem</h3>
+                  <h3>Neues Restaurant eröffnet in der Innenstadt</h3>
                 </center>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-                  voluptas fugit obcaecati eaque officia, accusantium repellat
-                  voluptatum nesciunt.
+                  Ein neues Restaurant hat in der Innenstadt eröffnet. Es bietet
+                  eine Vielzahl von Gerichten aus verschiedenen Ländern an,
+                  darunter asiatische, italienische und mexikanische Küche. Es
+                  ist ein großartiger Ort für ein Abendessen mit Freunden oder
+                  Familie.
                 </p>
               </div>
             </div>
           </div>
+          <div class="articleText">
+            <center>
+              <h2>Unwetterwarnung: Sturm zieht über die Stadt</h2>
+              <h4>
+                Die Stadtverwaltung warnt vor einem starken Sturm, der in den
+                nächsten Stunden über die Stadt ziehen wird. Es wird empfohlen,
+                sich in geschlossenen Räumen aufzuhalten und alle Fenster und
+                Türen zu schließen.
+              </h4>
+            </center>
+          </div>
+          <div class="dArticle2">
+            <div class="left">
+              <center>
+                <h3>Brand in Fabrikgebäude: Feuerwehr im Einsatz</h3>
+              </center>
+
+              <img src="img/test.jpg" alt="" />
+            </div>
+            <div class="right">
+              <img src="img/test.jpg" alt="" />
+              <div>
+                <center>
+                  <h3>Neue Bauprojekte in der Stadt geplant</h3>
+                </center>
+                <p>
+                  Die Stadt plant mehrere neue Bauprojekte, darunter ein neues
+                  Einkaufszentrum und ein modernes Wohngebiet. Die Projekte
+                  sollen zur wirtschaftlichen Entwicklung der Stadt beitragen
+                  und neue Arbeitsplätze schaffen.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="articleText">
+            <center>
+              <h2>Neues Kulturzentrum eröffnet</h2>
+              <h4>
+                Die Stadt hat ein neues Kulturzentrum eröffnet, das eine
+                Vielzahl von Veranstaltungen wie Konzerte, Theateraufführungen
+                und Ausstellungen bietet. Das Zentrum soll dazu beitragen, das
+                kulturelle Leben der Stadt zu bereichern.
+              </h4>
+            </center>
+          </div>
         </div>
-        <div class="right">
+        <div class="cRight">
           <div class="weather">
             <iframe
               style="
