--- a/chiemgau48reloaded/index.html
+++ b/chiemgau48reloaded/index.html
@@ -72,7 +72,7 @@
               <img src="img/test.jpg" alt="" />
             </div>
             <div class="right">
-              <img src="img/test.jpg" alt="" />
+              <img src="img/test.jpg" alt="" />ä
               <div>
                 <center>
                   <h3>Neues Restaurant eröffnet in der Innenstadt</h3>
