--- a/chiemgau48reloaded/index.html
+++ b/chiemgau48reloaded/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script/script.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -17,7 +18,22 @@
           <li>Gewinnspiel</li>
           <li>Newsletter</li>
         </div>
-
+        <div class="navBar">
+          <img src="img/menuBar.png" onclick="showNav()" id="open" alt="" />
+          <div class="navOverlay" id="navOverlay">
+            <img
+              src="img/menuClose.png"
+              onclick="closeNav()"
+              id="close"
+              alt=""
+            />
+            <li>Startseite</li>
+            <li>News</li>
+            <li>Lokales</li>
+            <li>Gewinnspiel</li>
+            <li>Newsletter</li>
+          </div>
+        </div>
         <img src="img/logo.svg" alt="" />
       </nav>
       <div class="content">
@@ -72,7 +88,7 @@
               <img src="img/test.jpg" alt="" />
             </div>
             <div class="right">
-              <img src="img/test.jpg" alt="" />ä
+              <img src="img/test.jpg" alt="" />
               <div>
                 <center>
                   <h3>Neues Restaurant eröffnet in der Innenstadt</h3>
@@ -137,7 +153,7 @@
           <div class="weather">
             <iframe
               style="
-                width: fit-content;
+                width: 100%;
                 border: none;
                 height: 350px;
                 background-color: transparent;
